--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "gestion_de_stocks",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Application de gestion de stocks pour magasins",
+  "main": "electron.js",
+  "author": "Hakim Bachabi",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "electron": "electron .",
+    "electron-dev": "NODE_ENV=development electron .",
+    "pack": "electron-builder --dir",
+    "dist": "npm run build && electron-builder",
+    "dist-win": "npm run build && electron-builder --win",
+    "dist-mac": "npm run build && electron-builder --mac",
+    "dist-all": "npm run build && electron-builder -mwl"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
@@ -26,11 +36,49 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.50",
+    "electron": "^39.2.1",
+    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "build": {
+    "appId": "com.gestionstocks.app",
+    "productName": "Gestion de Stocks",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron.js",
+      ".next/**/*",
+      "node_modules/**/*",
+      "package.json",
+      "prisma/**/*",
+      "public/**/*",
+      "app/**/*"
+    ],
+    "win": {
+      "target": ["nsis"],
+      "icon": "public/icon.ico"
+    },
+    "mac": {
+      "target": ["dmg"],
+      "icon": "public/icon.icns",
+      "category": "public.app-category.business"
+    },
+    "linux": {
+      "target": ["AppImage"],
+      "icon": "public/icon.png",
+      "category": "Office"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
   }
 }
